src/objects/Legislation__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether we are currently tracking this bill</description>
        <inlineHelpText>Whether we are currently tracking this bill</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amendment_Count__c</fullName>
        <description>Number of amendments proposed to this Bill</description>
        <inlineHelpText>Number of amendments proposed to this Bill</inlineHelpText>
        <label>Amendment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awaiting_Signature_Date__c</fullName>
        <description>When a bill began awaiting the president&apos;s signature</description>
        <inlineHelpText>When a bill began awaiting the president&apos;s signature</inlineHelpText>
        <label>Awaiting Signature Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Awaiting_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the bill is awaiting a signature from the President</description>
        <inlineHelpText>Indicates if the bill is awaiting a signature from the President</inlineHelpText>
        <label>Awaiting Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_ID__c</fullName>
        <description>Unique ID for this Legislation, should be the same as the Legislation Name and is required as it provides an External ID for binding Roll Votes, Sponsorship and Amendments as needed.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID for this Legislation, should be the same as the Legislation Name and is required as it provides an External ID for binding Roll Votes, Sponsorship and Amendments as needed.</inlineHelpText>
        <label>Bill ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Number__c</fullName>
        <description>Just the numerical part of the bill or amendment number.</description>
        <inlineHelpText>Just the numerical part of the bill or amendment number.</inlineHelpText>
        <label>Bill Number</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prefix__c</fullName>
        <description>Bill prefix corresponding to bill title, e.g. &quot;HR&quot; for HR1212</description>
        <inlineHelpText>Bill prefix corresponding to bill title, e.g. &quot;HR&quot; for HR1212</inlineHelpText>
        <label>Bill Prefix</label>
        <picklist>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HJRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAMDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAMDT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bill_Title__c</fullName>
        <description>Title of proposed bill.  Leave out Bill Number (e.g. HR3254), which should go into Bill Number field.</description>
        <inlineHelpText>Title of proposed bill.  Leave out Bill Number (e.g. HR3254), which should go into Bill Number field.</inlineHelpText>
        <label>Bill Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Type__c</fullName>
        <description>Type of bill - Bills, Resolutions, Joint Resolutions, Concurrent Resolutions</description>
        <inlineHelpText>Type of bill - Bills, Resolutions, Joint Resolutions, Concurrent Resolutions</inlineHelpText>
        <label>Bill Type</label>
        <picklist>
            <picklistValues>
                <fullName>hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hjres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hcres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sjres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>scres</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Categories</label>
        <picklist>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GI Bill</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Congressional_Session__c</fullName>
        <description>E.g. for the 112th congress select 112.  Must be filled in for Thomas link to work.</description>
        <inlineHelpText>E.g. for the 112th congress select 112.  Must be filled in for Thomas link to work.</inlineHelpText>
        <label>Session</label>
        <picklist>
            <picklistValues>
                <fullName>112</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>109</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cosponsors_Count__c</fullName>
        <description>Total number of cosponsoring legislators</description>
        <inlineHelpText>Total number of cosponsoring legislators</inlineHelpText>
        <label>Cosponsors Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cosponsors__c</fullName>
        <label>Cosponsors</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Bill_Info_Updated__c</fullName>
        <description>When bill info was last pulled in from GovTrack</description>
        <inlineHelpText>When bill info was last pulled in from GovTrack</inlineHelpText>
        <label>Date Bill Info Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Enacted_Date__c</fullName>
        <description>Date the Bill was enacted at</description>
        <inlineHelpText>Date the Bill was enacted at</inlineHelpText>
        <label>Enacted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enacted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this Bill has been enacted</description>
        <inlineHelpText>If this Bill has been enacted</inlineHelpText>
        <label>Enacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Bill_Number__c</fullName>
        <description>Combination of prefix and number, e.g. HR5322</description>
        <formula>text( Bill_Prefix__c ) + text( Bill_Number__c )</formula>
        <inlineHelpText>Combination of prefix and number, e.g. HR5322</inlineHelpText>
        <label>Full Bill Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Passage_Date__c</fullName>
        <description>Date of House passage vote</description>
        <inlineHelpText>Date of House passage vote</inlineHelpText>
        <label>House Passage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>House_Passage_Status__c</fullName>
        <description>Status of House passage of bill (pass, fail or null)</description>
        <inlineHelpText>Status of House passage of bill (pass, fail or null)</inlineHelpText>
        <label>House Passage Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Introduced_Date__c</fullName>
        <description>Date the bill was introduced</description>
        <inlineHelpText>Date the bill was introduced</inlineHelpText>
        <label>Introduced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legislative_Body__c</fullName>
        <label>Legislative Body</label>
        <picklist>
            <controllingField>Bill_Prefix__c</controllingField>
            <picklistValues>
                <fullName>House</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Senate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Body</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Passage_Vote_Count__c</fullName>
        <description>Count of total number of passage votes on this bill</description>
        <inlineHelpText>Count of total number of passage votes on this bill</inlineHelpText>
        <label>Passage Vote Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Senate_Passage_Date__c</fullName>
        <description>Date of Senate passage vote</description>
        <inlineHelpText>Date of Senate passage vote</inlineHelpText>
        <label>Senate Passage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Senate_Passage_Status__c</fullName>
        <description>Status of Senate passage of bill (pass, fail or null)</description>
        <inlineHelpText>Status of Senate passage of bill (pass, fail or null)</inlineHelpText>
        <label>Senate Passage Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_ID__c</fullName>
        <description>Bioguide ID of the sponsor</description>
        <inlineHelpText>Bioguide ID of the sponsor</inlineHelpText>
        <label>Sponsor ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Info__c</fullName>
        <label>Sponsor Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Legislation</relationshipLabel>
        <relationshipName>Legislation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Change_Date__c</fullName>
        <description>The date/time of the last status change</description>
        <inlineHelpText>The date/time of the last status change</inlineHelpText>
        <label>Status Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>CRS Summary</description>
        <inlineHelpText>CRS Summary</inlineHelpText>
        <label>Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>THOMAS_link__c</fullName>
        <description>Link to THOMAS description of bill.  Only works if Bill Name and Congressional Session are filled in.</description>
        <formula>if(
  or(isblank(text(Congressional_Session__c)),
      isblank(text( Bill_Prefix__c )),
      isblank(text(Bill_Number__c))
  ),
&quot;Choose a value for Bill Prefix, Bill Number, and Congressional Session&quot;,
HYPERLINK(&quot;http://hdl.loc.gov/loc.uscongress/legislation.&quot; + text(Congressional_Session__c) +  LOWER(text(Bill_Prefix__c)) + text(Bill_Number__c) , &quot;View in THOMAS&quot;, &quot;_blank&quot;))</formula>
        <inlineHelpText>Link to THOMAS description of bill.  Only works if Bill Name and Congressional Session are filled in.</inlineHelpText>
        <label>THOMAS link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vetoed_Date__c</fullName>
        <description>Date of veto, if applicable</description>
        <inlineHelpText>Date of veto, if applicable</inlineHelpText>
        <label>Vetoed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vetoed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicated if this Bill has been vetoed</description>
        <inlineHelpText>Indicated if this Bill has been vetoed</inlineHelpText>
        <label>Vetoed</label>
        <type>Checkbox</type>
    </fields>
    <label>Legislation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Full_Bill_Number__c</columns>
        <columns>Bill_Title__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bill ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legislation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>